comprobacion de email y tipos