@@ -1,17 +1,14 @@
 package SolidarityHub.services;
 
-//import SolidarityHub.factories.UsuarioFactory;
 import SolidarityHub.models.Usuario;
 import SolidarityHub.repository.UsuarioRepositorio;
-
-import java.io.IOException;
-import java.nio.file.Files;
-import java.util.List;
 import org.springframework.stereotype.Service;
-
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 
+import java.io.IOException;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 public class UsuarioServicio {
@@ -30,16 +27,16 @@ public class UsuarioServicio {
     }
 
     public Usuario guardarUsuario(Usuario usuario) {
-        if(usuario.getFoto() == null) {
-            try{
-                usuario.setFoto(getDefaultProfileImage());
-            } catch (IOException e) {
-                e.printStackTrace();
-                usuario.setFoto(null);
-                throw new RuntimeException("Error al obtener la imagen por defecto", e);
-                
-            }
+        // Obtener tipo de usuario
+        String tipoUsuario = usuario.getTipoUsuario();
+
+        // Comprobar si ya existe un usuario con el mismo email y tipo
+        Optional<Usuario> usuarioExistente = usuarioRepositorio.findByEmailAndTipoUsuario(usuario.getEmail(), tipoUsuario);
+
+        if (usuarioExistente.isPresent()) {
+            throw new RuntimeException("Ya existe un usuario del tipo '" + tipoUsuario + "' con este email.");
         }
+
         return usuarioRepositorio.save(usuario);
     }
 
@@ -48,12 +45,10 @@ public class UsuarioServicio {
     }
 
 
-
     public byte[] getDefaultProfileImage() throws IOException {
         Resource defaultImage = new ClassPathResource("static/images/IconoUsuarioPorDefecto.png");
-        System.out.println("Ha entrado en getDefaultProfileImage");
-        return Files.readAllBytes(defaultImage.getFile().toPath());
+        try (var inputStream = defaultImage.getInputStream()) {
+            return inputStream.readAllBytes();
+        }
     }
-
-
 }
